internal/gatewayapi/testdata/httproute-rule-with-non-service-backends-and-weights.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
      rules:
        - matches:
            - path:
                value: "/"
          backendRefs:
            - name: service-1
              port: 8080
              weight: 1
            - group: gateway.envoyproxy.io
              kind: Backend
              name: backend-mixed-ip-uds
              weight: 2
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-2
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
      rules:
        - matches:
            - path:
                value: "/route-2"
          backendRefs:
            - group: gateway.envoyproxy.io
              kind: Backend
              name: backend-fqdn
backends:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: Backend
    metadata:
      name: backend-mixed-ip-uds
      namespace: default
    spec:
      endpoints:
        - ip:
            address: 10.244.0.28
            port: 3000
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: Backend
    metadata:
      name: backend-fqdn
      namespace: default
    spec:
      endpoints:
        - fqdn:
            hostname: primary.foo.com
            port: 3000
